# ConvertIntoList

./: README.md  pyproject.toml
convertlist/: convertlist.py
